--- a/hyprland.conf
+++ b/hyprland.conf
@@ -5,15 +5,15 @@ monitor=,preferred,auto,1
 exec-once = waybar -c ~/.config/hypr/waybar/config.jsonc -s ~/.config/hypr/waybar/style.css
 exec-once = swaybg -m fill -i /home/nikita/pictures/neboskreb.jpg
 exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
-exec-once = /home/nikita/.config/hypr/xdph.sh
+# exec-once = ~/.config/hypr/xdph.sh
 
 # Some default env vars.
-env = QT_QPA_PLATFORM, wayland
 env = XDG_CURRENT_DESKTOP, Hyprland
-env = XDG_SESSION_TYPE, wayland
 env = XDG_SESSION_DESKTOP, Hyprland
-# env = BEMENU_BACKEND, wayland
-# env = BEMENU_OPTS, -p ">" -n -H 26 --fn "JetBrainsMono Nerd Font Medium 13" --tb ##282c34 --tf ##fcfcfc --fb ##282c34 --ff ##fcfcfc --nf ##fcfcfc --nb ##282c34 --hf ##fcfcfc --hb ##5c6667 --sb ##282c34 --sf ##fcfcfc --af ##fcfcfc --ab ##282c34
+env = XDG_SESSION_TYPE, wayland
+env = QT_QPA_PLATFORM, wayland
+env = BEMENU_BACKEND, wayland
+env = BEMENU_OPTS, -p ">" -n -H 26 --fn "JetBrainsMono Nerd Font Medium 12" --tb ##282c34 --tf ##fcfcfc --fb ##282c34 --ff ##fcfcfc --nf ##fcfcfc --nb ##282c34 --hf ##fcfcfc --hb ##5c6667 --sb ##282c34 --sf ##fcfcfc --af ##fcfcfc --ab ##282c34
 
 # Input settings
 input {
@@ -36,25 +36,28 @@ general {
     gaps_out = 5
     border_size = 3
 
-    col.active_border=rgb(fcfcfc)
-    col.inactive_border=rgb(282c34)
+    col.active_border = rgb(fcfcfc)
+    col.inactive_border = rgb(282c34)
 
     layout = master
 }
 
 decoration {
-    rounding = 0
-    multisample_edges = false
-    blur = false
-    drop_shadow = true
-    shadow_range = 9
+    drop_shadow = false
+    blur {
+      enabled = false
+    }
 }
 
+
+
 misc {
+    disable_hyprland_logo = true
     animate_manual_resizes = false
     animate_mouse_windowdragging = false
     focus_on_activate = true
   }
+
 
 animations {
     enabled = false
@@ -66,7 +69,7 @@ dwindle {
 }
 
 master {
-    no_gaps_when_only = true
+    no_gaps_when_only = false
     new_on_top = true
     new_is_master = false
 }
@@ -88,17 +91,17 @@ $mainMod = SUPER
 bind = , XF86AudioRaiseVolume,  exec, pactl set-sink-volume @DEFAULT_SINK@ +5%
 bind = , XF86AudioLowerVolume,  exec, pactl set-sink-volume @DEFAULT_SINK@ -5%
 bind = , XF86AudioMute,         exec, pactl set-sink-mute @DEFAULT_SINK@ toggle
-bind = , XF86MonBrightnessUp,  exec, brightnessctl s +5%
-bind = , XF86MonBrightnessDown,  exec, brightnessctl s 5%-
+bind = , XF86MonBrightnessUp,   exec, brightnessctl s +5%
+bind = , XF86MonBrightnessDown, exec, brightnessctl s 5%-
 bind = , Print, exec, grimblast copy area
 
 # Run apps
 bind = $mainMod SHIFT, return, exec, foot
-bind = $mainMod, q, killactive, 
+bind = $mainMod, q, killactive,
 bind = $mainMod, P, exec, bemenu-run
-bind = $mainMod SHIFT, e, exit, 
-bind = $mainMod SHIFT, q, exec, shutdown -h now 
-bind = $mainMod, f, togglefloating, 
+bind = $mainMod SHIFT, e, exit,
+bind = $mainMod SHIFT, q, exec, shutdown -h now
+bind = $mainMod, f, togglefloating,
 bind = $mainMod, tab, fullscreen, 1
 
 # Move focus, resize and move window in master layout
