--- a/waybar/config.jsonc
+++ b/waybar/config.jsonc
@@ -1,20 +1,19 @@
 {
-  "spacing": 10,
+  "spacing": 0,
   "layer": "bottom",
   "height": 33,
-  "modules-left": ["wlr/workspaces", "hyprland/window"],
+  "modules-left": ["hyprland/workspaces", "hyprland/window"],
   "modules-center": ["clock"],
-  "modules-right": ["hyprland/language", "pulseaudio",  "battery", "custom/mem", "network"],
+  "modules-right": ["hyprland/language", "pulseaudio",  "battery", "memory", "network"],
 
-  "wlr/workspaces": {
-    "on-click": "activate",
+  "hyprland/workspaces": {
     "all-outputs": true,
-    "active-only": false
+    "active-only": false,
+    "format": "{}"
   },
 
   "hyprland/language": {
-    "format": "{}  ",
-    // "format": "<span font_desc='JetBrainsMono Nerd Font Medium 16'>󰌌 </span><span rise='2000'>{}  </span>",
+    "format": "<span font_desc='JetBrainsMono Nerd Font Medium 16'>󰌌 </span><span rise='2000'>{}   </span>",
     "format-ru": "RU",
     "format-en": "EN"
   },
@@ -22,16 +21,16 @@
   "pulseaudio": {
     "format-muted": "<span font_desc='JetBrainsMono Nerd Font Medium 18'>{icon}</span> <span rise='2700'>muted</span>",
     "format-icons": ["󰕿", "󰖀", "󰕾"],
-    "format": "<span font_desc='JetBrainsMono Nerd Font Medium 18'>{icon}</span> <span rise='2700'>{volume}%  </span>"
+    "format": "<span font_desc='JetBrainsMono Nerd Font Medium 18'>{icon}</span> <span rise='2700'>{volume}%   </span>"
   },
 
   "battery": {
-    "format": "<span font_desc='JetBrainsMono Nerd Font Medium 14' letter_spacing='-1000'>{icon}  </span>{capacity}%  ",
+    "format": "<span font_desc='JetBrainsMono Nerd Font Medium 14' letter_spacing='-1000'>{icon}  </span>{capacity}%   ",
     "format-icons": ["", "", "", "", ""]
   },
 
   "clock": {
-    "format": "<span font_desc='JetBrainsMono Nerd Font Medium 16'> </span><span rise='2000'>{:%H:%M}  </span>",
+    "format": "<span font_desc='JetBrainsMono Nerd Font Medium 16'> </span><span rise='2000'>{:%H:%M}   </span>",
     "timezone": "Asia/Krasnoyarsk"
   },
 
@@ -43,13 +42,13 @@
   },
 
   "memory": {
-    "format": "<span font_desc='JetBrainsMono Nerd Font Medium 14' letter_spacing='1000'> </span>{used}Gi  ",
+    "format": "<span font_desc='JetBrainsMono Nerd Font Medium 14' letter_spacing='1000'> </span>{used}Gi   ",
     "interval": 2
   },
 
   "custom/mem": {
     "exec": "free -h | awk '(NR==2) {print $3}'",
-    "format": "<span font_desc='JetBrainsMono Nerd Font Medium 15' letter_spacing='-1000' rise='-1500'> </span>{}  ",
+    "format": "<span font_desc='JetBrainsMono Nerd Font Medium 15' letter_spacing='-1000' rise='-1500'> </span>{}   ",
     "interval": 2
   }
 }
