changed waybar color

--- a/hyprland.conf
+++ b/hyprland.conf
@@ -3,7 +3,7 @@ monitor=,preferred,auto,1
 
 # Autostart
 exec-once = waybar -c ~/.config/hypr/waybar/config.jsonc -s ~/.config/hypr/waybar/style.css
-exec-once = swaybg -m fill -i /home/nikita/pictures/neboskreb.jpg
+exec-once = swaybg -m fill -i /home/nikita/pictures/groot-dark.png
 exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 # exec-once = ~/.config/hypr/xdph.sh
 
@@ -13,7 +13,7 @@ env = XDG_SESSION_DESKTOP, Hyprland
 env = XDG_SESSION_TYPE, wayland
 env = QT_QPA_PLATFORM, wayland
 env = BEMENU_BACKEND, wayland
-env = BEMENU_OPTS, -p ">" -n -H 26 --fn "JetBrainsMono Nerd Font Medium 12" --tb ##282c34 --tf ##fcfcfc --fb ##282c34 --ff ##fcfcfc --nf ##fcfcfc --nb ##282c34 --hf ##fcfcfc --hb ##5c6667 --sb ##282c34 --sf ##fcfcfc --af ##fcfcfc --ab ##282c34
+env = BEMENU_OPTS, -p ">" -n -H 26 --fn "JetBrainsMono Nerd Font Medium 12" --tb ##1a1b26 --tf ##d2d9f8 --fb ##1a1b26 --ff ##d2d9f8 --nf ##d2d9f8 --nb ##1a1b26 --hf ##d2d9f8 --hb ##5e5f67 --sb ##1a1b26 --sf ##d2d9f8 --af ##d2d9f8 --ab ##1a1b26
 
 # Input settings
 input {
@@ -32,12 +32,12 @@ input {
 # Variables
 general {
     resize_on_border = true
-    gaps_in = 5
-    gaps_out = 5
+    gaps_in = 0
+    gaps_out = 0
     border_size = 3
 
-    col.active_border = rgb(fcfcfc)
-    col.inactive_border = rgb(282c34)
+    col.active_border = rgb(d2d9f8)
+    col.inactive_border = rgb(5e5f67)
 
     layout = master
 }
@@ -100,7 +100,7 @@ bind = $mainMod SHIFT, return, exec, foot
 bind = $mainMod, q, killactive,
 bind = $mainMod, P, exec, bemenu-run
 bind = $mainMod SHIFT, e, exit,
-bind = $mainMod SHIFT, q, exec, shutdown -h now
+bind = $mainMod SHIFT, q, exec, systemctl poweroff
 bind = $mainMod, f, togglefloating,
 bind = $mainMod, tab, fullscreen, 1
 
