added volume and brightness scripts for dunst notifications

--- a/hyprland.conf
+++ b/hyprland.conf
@@ -13,7 +13,7 @@ env = XDG_SESSION_DESKTOP, Hyprland
 env = XDG_SESSION_TYPE, wayland
 env = QT_QPA_PLATFORM, wayland
 env = BEMENU_BACKEND, wayland
-env = BEMENU_OPTS, -p ">" -n -H 26 --fn "JetBrainsMono Nerd Font Medium 12" --tb ##1a1b26 --tf ##d2d9f8 --fb ##1a1b26 --ff ##d2d9f8 --nf ##d2d9f8 --nb ##1a1b26 --hf ##d2d9f8 --hb ##5e5f67 --sb ##1a1b26 --sf ##d2d9f8 --af ##d2d9f8 --ab ##1a1b26
+env = BEMENU_OPTS, -p ">" -n -H 26 --fn "JetBrainsMono NF Medium 12" --tb ##1a1b26 --tf ##d2d9f8 --fb ##1a1b26 --ff ##d2d9f8 --nf ##d2d9f8 --nb ##1a1b26 --hf ##d2d9f8 --hb ##5e5f67 --sb ##1a1b26 --sf ##d2d9f8 --af ##d2d9f8 --ab ##1a1b26
 
 # Input settings
 input {
@@ -88,11 +88,16 @@ device:epic mouse V1 {
 $mainMod = SUPER
 
 # Volume, brightness and screenshot
-bind = , XF86AudioRaiseVolume,  exec, pactl set-sink-volume @DEFAULT_SINK@ +5%
-bind = , XF86AudioLowerVolume,  exec, pactl set-sink-volume @DEFAULT_SINK@ -5%
-bind = , XF86AudioMute,         exec, pactl set-sink-mute @DEFAULT_SINK@ toggle
-bind = , XF86MonBrightnessUp,   exec, brightnessctl s +5%
-bind = , XF86MonBrightnessDown, exec, brightnessctl s 5%-
+# bind = , XF86AudioRaiseVolume,  exec, pactl set-sink-volume @DEFAULT_SINK@ +5%
+# bind = , XF86AudioLowerVolume,  exec, pactl set-sink-volume @DEFAULT_SINK@ -5%
+# bind = , XF86AudioMute,         exec, pactl set-sink-mute @DEFAULT_SINK@ toggle
+bind = , XF86AudioRaiseVolume,  exec, ~/.config/hypr/volume.sh up
+bind = , XF86AudioLowerVolume,  exec, ~/.config/hypr/volume.sh down
+bind = , XF86AudioMute,         exec, ~/.config/hypr/volume.sh mute
+# bind = , XF86MonBrightnessUp,   exec, brightnessctl s +5%
+# bind = , XF86MonBrightnessDown, exec, brightnessctl s 5%-
+bind = , XF86MonBrightnessUp,   exec, ~/.config/hypr/brightness.sh up
+bind = , XF86MonBrightnessDown, exec, ~/.config/hypr/brightness.sh down
 bind = , Print, exec, grimblast copy area
 
 # Run apps
