--- a/hyprland.conf
+++ b/hyprland.conf
@@ -23,7 +23,7 @@ input {
     touchpad {
         natural_scroll = yes
     }
-    sensitivity = 0.4 # -1.0 - 1.0, 0 means no modification.
+    sensitivity = 0.3 # -1.0 - 1.0, 0 means no modification.
     # accel_profile = flat
     repeat_rate = 25
     repeat_delay = 300
@@ -35,6 +35,7 @@ general {
     gaps_in = 0
     gaps_out = 0
     border_size = 3
+    no_cursor_warps = true
 
     col.active_border = rgb(d2d9f8)
     col.inactive_border = rgb(5e5f67)
@@ -56,8 +57,8 @@ misc {
     animate_manual_resizes = false
     animate_mouse_windowdragging = false
     focus_on_activate = true
+    new_window_takes_over_fullscreen = 2
   }
-
 
 animations {
     enabled = false
@@ -70,8 +71,8 @@ dwindle {
 
 master {
     no_gaps_when_only = false
-    new_on_top = true
     new_is_master = false
+    new_on_top = true
 }
 
 gestures {
@@ -82,7 +83,13 @@ device:epic mouse V1 {
     sensitivity = -0.5
 }
 
+animation=windows,1,4,default,slide
+animation=workspaces,1,4,default,slide
+animation=fade,0
+
 # Windows rules
+# windowrulev2 = nomaximizerequest, class:firefox
+windowrulev2 = nomaximizerequest, class:(firefox|libreoffice-startcenter)
 
 # Bindings
 $mainMod = SUPER
@@ -114,7 +121,7 @@ bind = $mainMod, j, layoutmsg, cyclenext
 bind = $mainMod, k, layoutmsg, cycleprev
 bind = $mainMod SHIFT, j, layoutmsg, swapnext
 bind = $mainMod SHIFT, k, layoutmsg, swapprev
-bind = $mainMod, return, layoutmsg, swapwithmaster
+bind = $mainMod, return, layoutmsg, swapwithmaster master
 bind = $mainMod, h, resizeactive, -50 0
 bind = $mainMod, l, resizeactive, 50 0
 
