--- a/hyprland.conf
+++ b/hyprland.conf
@@ -2,10 +2,10 @@
 monitor=,preferred,auto,1
 
 # Autostart
+exec-once = ~/.config/hypr/xdph.sh
 exec-once = waybar -c ~/.config/hypr/waybar/config.jsonc -s ~/.config/hypr/waybar/style.css
 exec-once = swaybg -m fill -i /home/nikita/pictures/groot-dark.png
 exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
-# exec-once = ~/.config/hypr/xdph.sh
 
 # Some default env vars.
 env = XDG_CURRENT_DESKTOP, Hyprland
@@ -53,10 +53,10 @@ decoration {
 
 
 misc {
+    vfr = true
     disable_hyprland_logo = true
     animate_manual_resizes = false
     animate_mouse_windowdragging = false
-    focus_on_activate = true
     new_window_takes_over_fullscreen = 2
   }
 
