add window rule

--- a/hyprland.conf
+++ b/hyprland.conf
@@ -2,7 +2,7 @@
 monitor=,preferred,auto,1
 
 # Autostart
-exec-once = ~/.config/hypr/xdph.sh
+# exec-once = ~/.config/hypr/xdph.sh
 exec-once = waybar -c ~/.config/hypr/waybar/config.jsonc -s ~/.config/hypr/waybar/style.css
 exec-once = swaybg -m fill -i /home/nikita/pictures/groot-dark.png
 exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
@@ -71,7 +71,7 @@ dwindle {
 
 master {
     no_gaps_when_only = false
-    new_is_master = false
+    new_is_master = true
     new_on_top = true
 }
 
@@ -79,17 +79,12 @@ gestures {
     workspace_swipe = off
 }
 
-device:epic mouse V1 {
-    sensitivity = -0.5
-}
-
 animation=windows,1,4,default,slide
 animation=workspaces,1,4,default,slide
 animation=fade,0
 
 # Windows rules
-# windowrulev2 = nomaximizerequest, class:firefox
-windowrulev2 = nomaximizerequest, class:(firefox|libreoffice-startcenter)
+windowrulev2 = suppressevent maximize, class:(firefox|libreoffice*)
 
 # Bindings
 $mainMod = SUPER
