--- a/hyprland.conf
+++ b/hyprland.conf
@@ -2,10 +2,11 @@
 monitor=,preferred,auto,1
 
 # Autostart
-exec-once = ~/.config/hypr/xdph.sh
+# exec-once = ~/.config/hypr/xdph.sh
 exec-once = waybar -c ~/.config/hypr/waybar/config.jsonc -s ~/.config/hypr/waybar/style.css
 exec-once = swaybg -m fill -i /home/nikita/pictures/groot-dark.png
-exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
+# exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
+exec-once = /usr/lib/polkit-kde-authentication-agent-1
 
 # Some default env vars.
 env = XDG_CURRENT_DESKTOP, Hyprland
