--- a/hyprland.conf
+++ b/hyprland.conf
@@ -22,7 +22,8 @@ input {
     kb_options = grp:win_space_toggle
     follow_mouse = 1
     touchpad {
-        natural_scroll = yes
+        natural_scroll = true
+        disable_while_typing = true
     }
     sensitivity = 0.3 # -1.0 - 1.0, 0 means no modification.
     # accel_profile = flat
@@ -36,7 +37,6 @@ general {
     gaps_in = 0
     gaps_out = 0
     border_size = 3
-    no_cursor_warps = true
 
     col.active_border = rgb(d2d9f8)
     col.inactive_border = rgb(5e5f67)
@@ -65,6 +65,10 @@ animations {
     enabled = false
 }
 
+cursor {
+  no_warps = true
+}
+
 dwindle {
     pseudotile = yes # master switch for pseudotiling. Enabling is bound to mainMod + P in the keybinds section below
     preserve_split = yes # you probably want this
@@ -72,7 +76,7 @@ dwindle {
 
 master {
     no_gaps_when_only = false
-    new_is_master = true
+    new_status = master
     new_on_top = true
 }
 
